services/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: business-automation
  labels:
    name: business-automation
    environment: production
